syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.intro.grpc.model";

message BalanceCheckRequest {
  int32 accountNumber = 1;
}

message Balance {
  int32 amount = 1;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance);
}